(This file, CHANGES, lists fixes. See NEWS for new features and enhancements.)

3.1.2 not yet released

  * Fixed visual glitch when characters spanning multiple columns are only
    partially displayed on the left side.

  * Fixed PARAGRAPH command.

3.1.1 2017-06-04

  * Fixed visual glitch when deleting characters from long lines.

  * Fixed broken behavior in WordWrap with leading whitespace.

  * On CloseDoc (^Q), the next document now becomes active. It used to make
    the previous document active.

3.1.0 2017-04-29

  * Comments in .yaml files are highlighted more correctly.

  * Determine better whether Find and FindRegExp patterns need to be recompiled
    when switching buffers. Fix possible lockup after cancelled Find.

  * Fixed missing screen update after ABOUT (regression introduced in 3.0.1).
    Thanks to Brian Callahan for reporting this bug.

  * Help command uses its optional parameter again.

  * PasteVert behaves beyond the right end of lines again.

  * AutoComplete keeps words containing apostrophes as single words ("can't"
    instead of "can" and "t").

  * Home, End, Tab keys now work in menus.

  * Backward FindRegExp works again.

  * Resizing the window in inputs, requesters is more sane.

  * Restored correct keyboard input for 8-bit character sets.

  * Update syntax code for feature parity with current Joe.

3.0.1 2015-06-22

  * Updated version of GNU regex library provides 64-bit regular
    expressions.

  * We no longer assign stdin, fixing a *BSD compatibility problem (thanks
    to Brian Callahan for reporting this issue).

  * Fixed missing screen update at startup when no default autoprefs are
    available.

3.0  2015-06-18

  * Allow remapping of character SEQuences in .keys files.

  * Global macros are now loaded from NE_GLOBAL_DIR/macros rather than
    NE_GLOBAL_DIR (/usr/local/share/ne/macros vs /usr/local/share/ne).

2.6  2015-04-17

  * Ancient bug with vertical clip edges fixed.
