@@ -7,6 +7,8 @@
 
   * Fixed PARAGRAPH command.
 
+  * Undoing DeleteNextWord/DeletePrevWord also restores cursor position.
+
 3.1.1 2017-06-04
 
   * Fixed visual glitch when deleting characters from long lines.
